@@ -1,20 +1,0 @@
-package org.beanmaker.v2.runtime;
-
-// TODO: évaluer utilité et supprimer si non avérée
-public interface DbBeanWithCode extends DbBeanInterface {
-
-    String getCode();
-    void setCode(String code);
-
-    boolean isCodeEmpty();
-    boolean isCodeRequired();
-    boolean isCodeOK();
-    boolean isCodeToBeUnique();
-    boolean isCodeUnique();
-
-    String getCodeLabel();
-    String getCodeEmptyErrorMessage();
-    String getCodeBadFormatErrorMessage();
-    String getCodeNotUniqueErrorMessage();
-
-}
