@@ -1,5 +1,5 @@
 package org.beanmaker.v2.runtime;
 
-public interface DbBeanWithUniqueCode {
+public interface DbBeanWithUniqueCode extends DbBeanInterface {
     String getCode();
 }
