@@ -1,27 +1,37 @@
 package org.beanmaker.v2.runtime.dbutil;
 
-import org.beanmaker.v2.runtime.DbBeanEditor;
-import org.beanmaker.v2.runtime.DbBeanInterface;
+import org.beanmaker.v2.runtime.DbBeanEditorWithUniqueCode;
 import org.beanmaker.v2.runtime.DbBeanParameters;
+import org.beanmaker.v2.runtime.DbBeanWithUniqueCode;
+
+import org.beanmaker.v2.util.Strings;
 
 import org.dbbeans.sql.DBAccess;
 import org.dbbeans.sql.DBTransaction;
 
+import java.util.List;
 import java.util.Optional;
 import java.util.regex.Pattern;
 
 public final class Codes {
 
-    private static final Pattern VALIDATION_PATTERN = Pattern.compile("[\\w+-]{4,20}");
+    public static final String STANDARD_CODE_CHARACTERS = "abcdefghijklmnopqrstuvwxyz0123456789_-";
+
+    public static final Pattern SHORT_VALIDATION_PATTERN = Pattern.compile("[a-z0-9_-]{4,20}");
+    public static final Pattern LONG_VALIDATION_PATTERN = Pattern.compile("[a-z0-9_-]{4,64}");
 
     private Codes() { }
 
-    public static boolean validateFormat(final String code) {
-        return VALIDATION_PATTERN.matcher(code).matches();
+    public static boolean validateFormat(String code, String regex) {
+        return Pattern.compile(regex).matcher(code).matches();
     }
 
-    public static <B extends DbBeanInterface> Optional<B> getBean(
-            Class<? extends DbBeanInterface> beanClass,
+    public static boolean validateFormat(String code, Pattern pattern) {
+        return pattern.matcher(code).matches();
+    }
+
+    public static <B extends DbBeanWithUniqueCode> Optional<B> getBean(
+            Class<? extends DbBeanWithUniqueCode> beanClass,
             DbBeanParameters parameters,
             String code,
             DBAccess dbAccess)
@@ -29,8 +39,8 @@ public final class Codes {
         return getBean(beanClass, parameters, "code", code, dbAccess);
     }
 
-    public static <B extends DbBeanInterface> Optional<B> getBean(
-            Class<? extends DbBeanInterface> beanClass,
+    public static <B extends DbBeanWithUniqueCode> Optional<B> getBean(
+            Class<? extends DbBeanWithUniqueCode> beanClass,
             DbBeanParameters parameters,
             String codeField,
             String code,
@@ -44,8 +54,8 @@ public final class Codes {
         );
     }
 
-    public static <B extends DbBeanInterface> Optional<B> getBean(
-            Class<? extends DbBeanInterface> beanClass,
+    public static <B extends DbBeanWithUniqueCode> Optional<B> getBean(
+            Class<? extends DbBeanWithUniqueCode> beanClass,
             DbBeanParameters parameters,
             String code,
             DBTransaction transaction)
@@ -53,8 +63,8 @@ public final class Codes {
         return getBean(beanClass, parameters, "code", code, transaction);
     }
 
-    public static <B extends DbBeanInterface> Optional<B> getBean(
-            Class<? extends DbBeanInterface> beanClass,
+    public static <B extends DbBeanWithUniqueCode> Optional<B> getBean(
+            Class<? extends DbBeanWithUniqueCode> beanClass,
             DbBeanParameters parameters,
             String codeField,
             String code,
@@ -72,7 +82,7 @@ public final class Codes {
         return "SELECT id FROM " + parameters.getDatabaseTableName() + " WHERE " + codeField + "=?";
     }
 
-    public static <E extends DbBeanEditor> Optional<E> getEditor(
+    public static <E extends DbBeanEditorWithUniqueCode> Optional<E> getEditor(
             E returnedEditor,
             DbBeanParameters parameters,
             String code,
@@ -81,7 +91,7 @@ public final class Codes {
         return getEditor(returnedEditor, parameters, "code", code, dbAccess);
     }
 
-    public static <E extends DbBeanEditor> Optional<E> getEditor(
+    public static <E extends DbBeanEditorWithUniqueCode> Optional<E> getEditor(
             E returnedEditor,
             DbBeanParameters parameters,
             String codeField,
@@ -96,7 +106,7 @@ public final class Codes {
         );
     }
 
-    public static <E extends DbBeanEditor> Optional<E> getEditor(
+    public static <E extends DbBeanEditorWithUniqueCode> Optional<E> getEditor(
             E returnedEditor,
             DbBeanParameters parameters,
             String code,
@@ -105,7 +115,7 @@ public final class Codes {
         return getEditor(returnedEditor, parameters, "code", code, transaction);
     }
 
-    public static <E extends DbBeanEditor> Optional<E> getEditor(
+    public static <E extends DbBeanEditorWithUniqueCode> Optional<E> getEditor(
             E returnedEditor,
             DbBeanParameters parameters,
             String codeField,
@@ -194,6 +204,34 @@ public final class Codes {
             DBTransaction transaction)
     {
         return getId(parameters, codeField, code, transaction) > 0;
+    }
+
+    public static void adjustCopyCode(DbBeanEditorWithUniqueCode copy) {
+        copy.setCode(copy.getCode() + "_copy");
+        if (!copy.isCodeUnique()) {
+            String baseCode = copy.getCode();
+            int index = 2;
+            do {
+                copy.setCode(baseCode + index);
+                ++index;
+            } while (!copy.isCodeUnique());
+        }
+    }
+
+    public static String createStandardizedCode(String source) {
+        return Strings.replaceUnknownChars(Strings.removeAccents(source).toLowerCase(), STANDARD_CODE_CHARACTERS);
+    }
+
+    public static void standardizeCodes(List<DbBeanEditorWithUniqueCode> beans, DBTransaction dbTransaction) {
+        Transactions.wrap(
+                transaction -> {
+                    for (var bean : beans) {
+                        bean.setCode(createStandardizedCode(bean.getCode()));
+                        bean.updateDB(transaction);
+                    }
+                },
+                dbTransaction
+        );
     }
 
 }
